--- a/MicroserviceArchitecture.Blazor/Shared/NavMenu.razor
+++ b/MicroserviceArchitecture.Blazor/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">                                              <!--New Line-->
+            <NavLink class="nav-link" href="claims">                            <!--New Line-->
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Claims <!--New Line-->
+            </NavLink>                                                          <!--New Line-->
+        </li>                                                                   <!--New Line-->
     </ul>
 </div>
 
