--- a/MicroserviceArchitecture.Blazor/Pages/FetchDataMiroservice1.razor
+++ b/MicroserviceArchitecture.Blazor/Pages/FetchDataMiroservice1.razor
@@ -1,7 +1,7 @@
-@page "/fetchdata"
+@page "/fetchdataMiroservice1"
 @using Microsoft.AspNetCore.Authorization
 @inject HttpClient Http
-@attribute [Authorize]                                                          //New Line
+@attribute [Authorize]
 
 <h1>Weather forecast</h1>
 
@@ -47,7 +47,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("https://localhost:5002/WeatherForecast");
+        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("https://localhost:5002/api/Microservice1");
     }
 
     public class WeatherForecast
