--- a/MicroserviceArchitecture.Blazor/Shared/NavMenu.razor
+++ b/MicroserviceArchitecture.Blazor/Shared/NavMenu.razor
@@ -18,8 +18,18 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="fetchdataMiroservice1">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data 1
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchdataMiroservice2">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data 2
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchdataMiroservice3">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data 3
             </NavLink>
         </li>
         <li class="nav-item px-3">                                              <!--New Line-->
